# Gazebo_Protobuf_Msg

./: CMakeLists.txt  README.md
src/: image_publisher.cpp  image_subscriber.cpp  my_image.proto
